@@ -1,3 +1,6 @@
+2011-07-21  6.7.1-0 Anthony Thyssen <A.Thyssen@griffith...>
+  * Removed a case that prevented rotations of rectangle kernels.
+
 2011-07-20  6.7.1-0 Glenn Randers-Pehrson <glennrp@image...>
   * Use zlib default compression strategy instead of Z_RLE and Z_FIXED
     strategies when linking with zlib versions (prior to 1.2.0 and 1.2.2.2,
